# projet-spam-detector-bloc4

./: .env.dist  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
notebooks/: 01_eda_baseline.ipynb  02_sequential_models.ipynb  03_transfer_learning_models.ipynb
