[project]
name = "projet-spam-detector-bloc4"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.8.5",
    "matplotlib>=3.10.9",
    "panda>=0.3.1",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "spacy>=3.8.0",
    "torch>=2.12.0",
    "transformers>=5.8.1",
]
